--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,2 +1,2 @@
-<script data-goatcounter="https://byhbju7wg45miylwipfxkqlv.goatcounter.com/count"
+<script data-goatcounter="https://polluxcodes.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
